--- a/DevGeekWeek2016Demos/TPL/TDFKinectGreenScreen/TDFKinectGreenScreen.csproj
+++ b/DevGeekWeek2016Demos/TPL/TDFKinectGreenScreen/TDFKinectGreenScreen.csproj
@@ -84,7 +84,7 @@
       <HintPath>..\..\..\..\..\..\..\..\Program Files\Microsoft SDKs\Kinect\v1.8\Assemblies\Microsoft.Kinect.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Samples.Kinect.SwipeGestureRecognizer">
-      <HintPath>bin\Debug\Microsoft.Samples.Kinect.SwipeGestureRecognizer.dll</HintPath>
+      <HintPath>.\Microsoft.Samples.Kinect.SwipeGestureRecognizer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
